@@ -632,15 +632,15 @@ Other memory:
 </table>
 
 <pre><ul>
-
 0.2.9 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Imported uIP into the tree (see
 	   http://www.sics.se/~adam/uip/index.php/Main_Page)
 	* Adding socket(), bind(), connect()
 	* Added snprintf()
-        * Added send() and sendto(); integrate write() and close() with socket descriptors.
+	* Added send() and sendto(); integrate write() and close() with socket descriptors.
         * Added recv() and recvfrom().
+	* Added getsockopt() and setsockopt()
 </pre></ul>
 
 <table width ="100%">
